@@ -1,3 +1,11 @@
+2009-09-03  Dave Korn  <dave.korn.cygwin@gmail.com>
+
+	* Makefile.am (BUILD_LIBINTL): New variable.
+	(i386-gen$(EXEEXT_FOR_BUILD)): Use it.
+	(ia64-gen$(EXEEXT_FOR_BUILD)): And here.
+	(z8kgen$(EXEEXT_FOR_BUILD)): And here.
+	* Makefile.in: Regenerate.
+
 2009-09-01  DJ Delorie  <dj@redhat.com>
 
 	* mep-asm.c: Regenerate.
